--- a/api-front/src/app/principal/principal.component.html
+++ b/api-front/src/app/principal/principal.component.html
@@ -1,2 +1,37 @@
-<h1>Rafael Magalhães</h1>
-<img src="assets/perfil.png" alt="foto de perfil">
+<!--Criando um formulário na página-->
+<form action="">
+    <!--Imagem-->
+    <img src="assets/perfil.png" alt="foto de perfil">
+
+    <!--Campos para preencher-->
+    <input type="text" placeholder="Nome" class="form-control">
+    <input type="text" placeholder="Idade" class="form-control">
+    <input type="text" placeholder="Cidade" class="form-control">
+
+    <!--Botões de cores diferentes
+    *ngIf="btnCadastro"  visualizar o botão na página, caso ele esteja true.
+     No principal.component.ts   -->
+    <input type="button" value="Cadastrar" *ngIf="btnCadastro"  class="btn btn-primary">
+    
+    <!--*ngIf="!btnCadastro"   sumindo os botões da página-->
+    <input type="button" value="Alterar" *ngIf="!btnCadastro" class="btn btn-warning">
+    <input type="button" value="Remover" *ngIf="!btnCadastro" class="btn btn-danger">
+    <input type="button" value="Cancelar" *ngIf="!btnCadastro" class="btn btn-secondary">
+</form>
+
+
+<!--Criar uma tabela-->
+<table class="table">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Nome</th>
+            <th>Idade</th>
+            <th>Cidade</th>
+            <th>Selecionar</th>
+        </tr>
+    </thead>
+
+    <tbody></tbody>
+
+</table>
