--- a/api-front/src/app/principal/principal.component.html
+++ b/api-front/src/app/principal/principal.component.html
@@ -24,7 +24,7 @@
 
 
 <!--Criar uma tabela-->
-<table class="table">
+<table class="table" *ngIf="tabela">
     <thead>
         <tr>
             <th>#</th>
