--- a/api-front/src/app/principal/principal.component.html
+++ b/api-front/src/app/principal/principal.component.html
@@ -17,8 +17,8 @@
     
     <!--*ngIf="!btnCadastro"   sumindo os botões da página-->
     <input type="button" value="Alterar" *ngIf="!btnCadastro" class="btn btn-warning" (click)="editar()">
-    <input type="button" value="Remover" *ngIf="!btnCadastro" class="btn btn-danger">
-    <input type="button" value="Cancelar" *ngIf="!btnCadastro" class="btn btn-secondary">
+    <input type="button" value="Remover" *ngIf="!btnCadastro" class="btn btn-danger" (click)="remover()">
+    <input type="button" value="Cancelar" *ngIf="!btnCadastro" class="btn btn-secondary" (click)="cancelar()">
 </form>
 
 
